--- a/typography.html
+++ b/typography.html
@@ -3,6 +3,7 @@ layout: page
 title: Typography
 permalink: /typography/
 main_nav: true
+order: 4
 ---
 
 <p>The purpose of this HTML is to help determine what default settings are with Bitters and to make sure that all possible HTML Elements are included in this HTML so as to not miss any possible Elements when designing a site.</p>
