--- a/typography.html
+++ b/typography.html
@@ -4,6 +4,7 @@ title: Typography
 permalink: /typography/
 main_nav: false
 order: 4
+sitemap: false
 ---
 
 <p>The purpose of this HTML is to help determine what default settings are with Bitters and to make sure that all possible HTML Elements are included in this HTML so as to not miss any possible Elements when designing a site.</p>
